--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <p id="text">Compteur avant la fin du projet SOLIDWORKS</p>
     <h1 id="compteur"></h1>
     
+    <p>Bon courage à tous !</p>
 
     <script>
         var fin = new Date("Nov 28, 2023 10:00:00").getTime();
